cmake_minimum_required(VERSION 3.27.8)
project(Algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algorithm main.cpp
        Private/TwoSum.cpp
        Public/Week1/Day1/TwoSum.h
        Public/Week1/Day1/ContainsDuplicate.h
        Public/Week1/Day1/IsAnagram.h
        Public/Week1/Day2/SubArraySumEqualsK.h
        Solution.cpp
        Solution.h
        Public/Week1/Day2/NumArray.h
        Public/Week1/Day3/MoveZeros.h
        Public/Week1/Day3/MergeTwoSortedArray.h
        Public/Week1/Day3/SortedSquares.h
        Public/Week1/Day4/ContainerWithMostWater.h
        Public/Week1/Day4/ThreeSum.h
        Public/Week1/Day4/TrappingRainWater.h
        Public/Week1/Day5/LongestSubstringWithoutRepeatingChar.h
        Public/Week1/Day5/MinSizeSubarraySum.h
        Public/Week1/Day5/FindAllAnagramsInString.h
        Public/Week1/Day6/PermutationinString.h
        Public/Week1/Day6/MinimumWindowSubstring.h
        Public/Week1/Day7/SearchInsertPosition.h
        Public/Week1/Day7/FindFirstAndLast.h
        Public/Week2/Day1/ReverseLinkedList.h
        Public/Week2/Type.h
        Public/Week2/Day1/MergeTwoSortedLists.h
        Public/Week2/Day1/RemoveNthFromEnd.h
        Public/Week2/Day2/LinkedListCycle.h
        Public/Week2/Day2/IntersectionOfLinkedList.h
        Public/Week2/Day3/ValidParentheses.h
        Public/Week2/Day3/MinStack.cpp
        Public/Week2/Day3/MinStack.h
        Public/Week2/Day3/ImplementQueueUsingStacks.h
        Public/Week2/Day4/DailyTemperature.h
        Public/Week2/Day4/NextGreaterElement.h
        Public/Week2/Day4/LargestRectInHistogram.h
        Public/Week2/Day5/FindKthLargest.h
        Template/QuickSort.cpp
        Template/QuickSort.h
        Template/MaxHeap.cpp
        Template/MaxHeap.h
        Public/Week2/Day6/MergeIntervals.h
        Public/Week2/Day6/NonOverlappingIntervals.h
        Public/Week2/Day7/JumpGame.h
        Public/Week2/Day7/BestTimeToSellStock.h
        Public/Week2/Day7/BestTimeToSellStock2.h
        Public/Week3/TreeNode.h
        Public/Week3/Day1/BinaryTreeLevelOrderTraversal.h
        Public/Week3/Day1/MaxDepthOfBinaryTree.h
        Public/Week3/Day2/ValidateBinarySearchTree.h
        Public/Week3/Day2/LowestCommonAncestorOfBinaryTree.h
        Public/Week3/Day2/PathSum3.h
        Public/Week3/Day3/DiameterOfBinaryTree.h
        Public/Week3/Day3/FlatternBinaryTreeToLinkedList.h
        Public/Week3/Day3/BuildBinTreeFromPreAndInOrderTraversal.h
        Public/Week3/Day4/NumberOfIslands.h
        Public/Week3/Day4/NumbersOfIslands_Official.h
        Public/Week3/Day4/RottingOranges.h
        Public/Week3/Day4/Matrix01.h
        Public/Week3/Day5/CourseSchedule.h
        Public/Week3/Day5/CourseSchedule2.h
        Public/Week3/Day5/FindEventualSafeStates.h
        Public/Week3/Day6/NumberOfProvince.h
        Template/UnionFind.hpp
        Public/Week3/Day6/RedundantConnections.h
        Public/Week3/Day6/MergeAccounts.h
        Template/Dijkstra.h
        Public/Week3/Day7/NetworkDelayTime.h
        Public/Week3/Day7/MinCostToConnectPoints.h
        Public/Week4/Day1/ClimbingStairs.h
        Template/AVLTree.h
        Public/Week4/Day2/HouseRobber.h
        Public/Week4/Day3/CoinChange.h
        Public/Week2/Day5/TopKFrequentEle.h
        Public/Week2/Day5/MedianFinder.h
        Public/Week4/Day4/PartitionEqualSubsetSum.h
        Public/Week4/Day5/LongsetIncreasingSubsequence.h
        Public/Week4/Day6/LongestCommonSubsequence.h
        shit.h
        Private/8.cpp
        Public/Week4/Day7/WordBreak.h
        Public/Week5/Day1/Permutations.h
        Public/Week5/Day2/Subsets.h
        Public/Week5/Day1/Permutations_Better.h
        Public/Week5/Day2/Subsets_Binary.h
        Public/Week5/Day2/Subsets_Recursion.h
        Public/Tencent/TencentOnlineTest.h
        Public/Tencent/Actor.cpp
        Public/Tencent/Actor.h
        Public/Week5/Day3/LongestPalindrome.h
        Public/Week5/Day4/LRUCache.h
        Public/Week5/Day5/MaximumSubarray.h
        Template/CArrayQueue.h
        Template/ReadWriteLock.h
        Public/Week5/Day6/EditDistance.h
        Public/Week5/Day7/SetMatrixZero.h
        Public/Week6/Day1/CombinationSum.h
        Public/Week6/Day1/CombinationSum_Traceback.h
        Public/Week6/Day2/GenerateParentheses.h
        Public/Week6/Day3/WordSearch.h
        Template/Singleton.h
        Template/Sort/InsertSort.h
        Template/Sort/BubbleSort.h
        Public/Week6/Day4/HouseRobber2.h
        Public/Week6/Day5/SpiralMatrix.h
        Public/Week6/Day6/SingleNumber.h
        Public/Week6/Day6/SingleNumber2.h
        Public/Week6/Day6/SingleNumber3.h
        Public/Week6/Day7/Trie.h
        Public/Week7/Day1/DecodeString.h
)
